--- a/ClassLibrary1/CapaDatosMemoria.csproj
+++ b/ClassLibrary1/CapaDatosMemoria.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CapaNegocio\CapaNegocio.csproj" />
+  </ItemGroup>
+
 </Project>
